--- a/template/css/admin.css
+++ b/template/css/admin.css
@@ -40,8 +40,7 @@ body {
     transition: background-color 0.3s;
 }
 
-.tab-button:hover,
-.tab-button.active {
+.tab-button:hover, .tab-button.active {
     background-color: #45a049;
 }
 
@@ -62,8 +61,7 @@ table {
     margin-bottom: 20px;
 }
 
-th,
-td {
+th, td {
     padding: 10px;
     text-align: left;
     border-bottom: 1px solid #ddd;
@@ -86,28 +84,4 @@ button {
 
 button:hover {
     background-color: #8e004e;
-}
-
-.mid-btn {
-    display: grid;
-    place-items: center;
-    /* Center both horizontally and vertically */
-    height: 70vh;
-    /* Make the container full height of the viewport */
-}
-
-.back-button {
-    font-size: 20px;
-    color: #FFFFFF;
-    padding: 10px;
-    text-decoration: none;
-    margin: 20px;
-    cursor: pointer;
-    background: rgba(255, 255, 255, 0.31);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(6.5px);
-    -webkit-backdrop-filter: blur(6.5px);
-    border: 1px solid rgba(255, 255, 255, 0.55);
-    width: 300px;
 }
