--- a/template/css/profil.css
+++ b/template/css/profil.css
@@ -17,10 +17,10 @@ body {
     text-align: center;
     background: rgba(255, 255, 255, 0.31);
     border-radius: 16px;
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(6.5px);
-        -webkit-backdrop-filter: blur(6.5px);
-        border: 1px solid rgba(255, 255, 255, 0.55);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.5px);
+    -webkit-backdrop-filter: blur(6.5px);
+    border: 1px solid rgba(255, 255, 255, 0.55);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -35,6 +35,8 @@ body {
     justify-content: flex-start;
         align-items: center;
         position: absolute;
+    margin-top: 50px;
+    margin-left: 45vh;
     /* Converti de 17% à 17vh */
         width: 100vh;
         /* Converti de 65% à 65vh */
@@ -44,11 +46,19 @@ body {
         backdrop-filter: blur(6.5px);
         -webkit-backdrop-filter: blur(6.5px);
         border: 1px solid rgba(255, 255, 255, 0.55);
+    justify-content: flex-start;
+    align-items: center;
+    position: absolute;
     margin-top: 1px;
     margin-left: 20%;
     width: 100vh;
     height: 80%;
-
+    background: rgba(255, 255, 255, 0.31);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.5px);
+    -webkit-backdrop-filter: blur(6.5px);
+    border: 1px solid rgba(255, 255, 255, 0.55);
 }
 
 .profile-container {
@@ -187,22 +197,20 @@ body {
     backdrop-filter: blur(6.5px);
     -webkit-backdrop-filter: blur(6.5px);
     border: 1px solid rgba(255, 255, 255, 0.55);
-    }
+}
 
-    .topic-content {
-        padding: 10px;
-        margin: 20px;
-        display: inline-block;
-        background: rgba(255, 255, 255, 0.15);
-        border-radius: 16px;
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(1.1px);
-        -webkit-backdrop-filter: blur(1.1px);
-        border: 1px solid rgba(255, 255, 255, 0.25);
-        flex-shrink: 0;
-        /* Empêche la réduction */
-        width: 80vh;
-        /* Converti de 80% à 80vh */
+.topic-content {
+    padding: 10px;
+    margin: 20px;
+    display: inline-block;
+    background: rgba(255, 255, 255, 0.15);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(1.1px);
+    -webkit-backdrop-filter: blur(1.1px);
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    flex-shrink: 0;
+    width: 80vh;
     background: rgba(255, 255, 255, 0.31);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -281,52 +289,4 @@ body {
     top: 95px;
     right: 20px;
 }
-.profile-pic {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    position: relative;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-
-.profile-pic label {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    cursor: pointer;
-}
-
-.profile-pic:hover #download-icon {
-    display: block;
-    opacity: 0.5;
-}
-
-#profile-image{
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    object-fit: cover;
-}
-#upload-form{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    cursor: pointer;
-}
-#profile-upload{
-    display: none;
-}
-#download-icon {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    display: none;
-}
