--- a/template/css/profil.css
+++ b/template/css/profil.css
@@ -5,9 +5,9 @@ body {
     padding: 0;
     background-image: url('/image/fond-ecran-forum.jpg');
     background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
     position: relative;
 }
 
@@ -31,34 +31,24 @@ body {
 .profile-wrapper {
     display: flex;
     flex-direction: column;
-        /* Changer de ligne pour une disposition verticale */
-    justify-content: flex-start;
-        align-items: center;
-        position: absolute;
-    margin-top: 50px;
-    margin-left: 45vh;
-    /* Converti de 17% à 17vh */
-        width: 100vh;
-        /* Converti de 65% à 65vh */
-        background: rgba(255, 255, 255, 0.31);
-        border-radius: 16px;
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(6.5px);
-        -webkit-backdrop-filter: blur(6.5px);
-        border: 1px solid rgba(255, 255, 255, 0.55);
+    /* Changer de ligne pour une disposition verticale */
     justify-content: flex-start;
     align-items: center;
     position: absolute;
-    margin-top: 1px;
-    margin-left: 20%;
+    /* Converti de 17% à 17vh */
     width: 100vh;
-    height: 80%;
+    /* Converti de 65% à 65vh */
     background: rgba(255, 255, 255, 0.31);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(6.5px);
     -webkit-backdrop-filter: blur(6.5px);
     border: 1px solid rgba(255, 255, 255, 0.55);
+    margin-top: 1px;
+    margin-left: 20%;
+    width: 100vh;
+    height: 80%;
+
 }
 
 .profile-container {
@@ -126,11 +116,11 @@ body {
     text-decoration: none;
     margin: 0 5px;
     background: rgba(255, 255, 255, 0.31);
-        border-radius: 16px;
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(6.5px);
-        -webkit-backdrop-filter: blur(6.5px);
-        border: 1px solid rgba(255, 255, 255, 0.55);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.5px);
+    -webkit-backdrop-filter: blur(6.5px);
+    border: 1px solid rgba(255, 255, 255, 0.55);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -210,7 +200,9 @@ body {
     -webkit-backdrop-filter: blur(1.1px);
     border: 1px solid rgba(255, 255, 255, 0.25);
     flex-shrink: 0;
+    /* Empêche la réduction */
     width: 80vh;
+    /* Converti de 80% à 80vh */
     background: rgba(255, 255, 255, 0.31);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -289,4 +281,52 @@ body {
     top: 95px;
     right: 20px;
 }
+.profile-pic {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+
+.profile-pic label {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+}
+
+.profile-pic:hover #download-icon {
+    display: block;
+    opacity: 0.5;
+}
+
+#profile-image{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+}
+#upload-form{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+}
+#profile-upload{
+    display: none;
+}
+#download-icon {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    display: none;
+}
