--- a/template/css/accueil.css
+++ b/template/css/accueil.css
@@ -356,3 +356,33 @@ body {
         width: 25%; /* Specific width for larger screens */
     }
 }
+#hashtagsList a {
+    color: black; /* Ensures text is black */
+    text-decoration: none; /* No underline */
+    cursor: pointer; /* Changes the cursor to a pointer to indicate it's clickable */
+}
+
+/* Ensuring the color and decoration don't change on hover or when active */
+#hashtagsList a:hover, #hashtagsList a:active, #hashtagsList a:focus {
+    color: black; /* Keeps text black on hover */
+    text-decoration: none; /* No underline on hover */
+}
+/* Style for category links */
+.topic a {
+    color: black; /* Ensures text is black */
+    text-decoration: none; /* No underline */
+    cursor: pointer; /* Changes the cursor to a pointer to indicate it's clickable */
+}
+.topic a:hover, .topic a:active, .topic a:focus {
+    color: black; /* Keeps text black on hover */
+    text-decoration: none; /* No underline on hover */
+}
+#categoriesList a {
+    color: black; /* Ensures text is black */
+    text-decoration: none; /* No underline */
+    cursor: pointer; /* Changes the cursor to a pointer to indicate it's clickable */
+}
+#categoriesList a:hover, #categoriesList a:active, #categoriesList a:focus {
+    color: black; /* Keeps text black on hover */
+    text-decoration: none; /* No underline on hover */
+}
