--- a/template/html/connexion.html
+++ b/template/html/connexion.html
@@ -47,7 +47,7 @@
         </div>
         <div class="Connexion-Container">
             <div class="other-connexion">
-                <a href="#" id="github-link"><i class='bx bxl-github'></i></a>
+                <a href="/loginGithub" id="github-link"><i class='bx bxl-github'></i></a>
                 <a href="/loginGoogle" id="google-link"><i class='bx bxl-google'></i></a>
                 <a href="/loginFacebook" id="facebook-link"><i class='bx bxl-meta'></i></a>
             </div>
