[main] add like&dislike feature     need a little fix for the request

--- a/template/html/postDetail.html
+++ b/template/html/postDetail.html
@@ -123,5 +123,6 @@
 <script src="../script/category.js"></script>
 <script src="../script/hashtag.js"></script>
 <script src="../script/scroller.js"></script>
+<script src="../script/like&dislike.js"></script>
 </body>
 </html>
